Tue Feb  3 00:18:40 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* special-matrix/sylvester_matrix.m: Rename from hadamard.m

	* miscellaneous/bug_report.m: Don't try to get smart with
	OCTAVE_HOME.  Assume octave-bug can be found in EXEC_PATH.

	* Makefile.in (install): Create separate ls-R files for
	$(datadir) and $(libexecdir).
	(uninstall): Remove both ls-R files.

Sat Jan 31 01:09:32 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* signal/fftshift.m: New file.

	* plot/contour.m: Fix for non-square case.

	* general/randperm.m: New file.

Fri Jan 30 15:20:39 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/betai.m: Restore file for compatibility with previous
	versions.  Call betainc with reordered args.
	* specfun/gammai.m: Likewise, call gammainc with reordered args.

Wed Jan 28 22:44:59 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* plot/contour.m: Handle discrete contour levels.

Tue Jan 27 04:31:22 1998  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* control/lyap.m: For compatibility with Matlab, solve
 	A*X + X*A' + C = 0 instead of A'*X + X*A + C = 0.

Wed Dec 10 00:14:29 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* specfun/bessel.m: New file.

	* specfun/betai.m, specfun/betainc.m, specfun/gammai.m,
	specfun/gammainc.m: Delete.

Wed Nov 19 00:19:18 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* image/colormap.m: Initialize __current_color_map__ in global
	statement.
	* miscellaneous/toc.m: Initialize __tic_toc_timestamp__ in global
	statement.
	* plot/axis.m: Initialize __current_axis__ in global statement.
	* plot/mplot.m, plot/multiplot.m, plot/oneplot.m, plot/subplot.m,
	plot/subwindow.m: Initialize __multiplot_mode__ in global statement.

Tue Nov 18 01:35:50 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* time/tic.m: Rename _time_tic_called to __tic_toc_timestamp__.
	* time/toc.m: Likewise.

	* image/colormap.m: Rename CURRENT_COLOR_MAP to __current_color_map__.

	* plot/mplot.m, plot/multiplot.m, plot/subplot.m: Don't do